# agentmesh-trading-research

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/trading_research/: __init__.py  cli.py  report.py
src/trading_research/data/: __init__.py  news.py  prices.py
tests/: test_news.py  test_prices.py  test_report.py
